# TrabalhoPratico-PROG-2023

./: AppManager.c  AppManager.h  CMakeLists.txt  StationTest.txt  main.c
Generic/: DynamicArray.c  DynamicArray.h  LinkedList.c  LinkedList.h  String.c  String.h
Metro/: FRoute.c  FRoute.h  MetroManager.c  MetroManager.h  RouteList.c  RouteList.h  Station.c  Station.h  StationList.c  StationList.h
